Phase4/Day22/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: taskflow-api-service

spec:
  selector:
    app: taskflow

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
